scode/Winners/prob7/error.txt
  File "main.py", line 8
    i=0
    ^
SyntaxError: invalid syntax
